<!--
  ~ /**
  ~  * Created by rafsanahmad on 7/10/21, 11:55 PM
  ~  * Copyright (c) 2021  rafsanahmad. All rights reserved.
  ~  * Last modified 7/10/21, 11:55 PM
  ~  */
  -->

<resources>
    <string name="app_name">Login Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logintext">Login</string>
    <string name="username_password">Username/Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="end_session">This will end your session</string>
    <string name="home">Home</string>
    <string name="android_challenge">Android Challenge</string>
</resources>