<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dev.loginregistration.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.dev.loginregistration.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/username"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextField" />

        <EditText
            android:id="@+id/userNameTextField"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewModel.inputUsername}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewModel.inputPassword}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <com.dev.custombutton.CustomButton
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:onClick="@{()->viewModel.loginButton()}"
            app:btn_backgroundColor="@color/light_blue"
            app:btn_borderColor="@color/purple_700"
            app:btn_borderWidth="2dp"
            app:btn_cornerRadius="10dp"
            app:btn_rippleColor="@color/purple_500"
            app:btn_subtitle="@string/username_password"
            app:btn_subtitleColor="@color/white"
            app:btn_title="@string/logintext"
            app:btn_titleColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>